testdata/baselines/reference/submodule/conformance/jsDeclarationsClassAccessor.errors.txt
argument.js(2,31): error TS8010: Type annotations can only be used in TypeScript files.


==== supplement.d.ts (0 errors) ====
    export { };
    declare module "./argument.js" {
        interface Argument {
            idlType: any;
            default: null;
        }
    }
==== base.js (0 errors) ====
    export class Base {
        constructor() { }
    
        toJSON() {
            const json = { type: undefined, name: undefined, inheritance: undefined };
            return json;
        }
    }
==== argument.js (1 errors) ====
    import { Base } from "./base.js";
    export class Argument extends Base {
                                  ~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        /**
         * @param {*} tokeniser
         */
        static parse(tokeniser) {
            return;
        }
    
        get type() {
            return "argument";
        }
    
        /**
         * @param {*} defs
         */
        *validate(defs) { }
    }